added_additional-fields_user-domain_and_user-creationquerie_and_added_kafka-event-consumers